--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,16 @@
-spring.freemarker.prefix=classpath:/templates/
-spring.freemarker.suffix=.ftlh
-spring.freemarker.cache=false
-
-server.port=8081
-spring.datasource.url=jdbc:h2:file:/data/bus_company_db
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
+spring.application.name=backend
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/BusCompany
+spring.datasource.username=postgres
+spring.datasource.password=1212
 spring.jpa.hibernate.ddl-auto=update
-spring.h2.console.enabled=true
+spring.jpa.hibernate.packages-to-scan=com.example.BusCompanyApp.models
 spring.jpa.show-sql=true
-spring.sql.init.mode=never
-
-spring.jpa.defer-datasource-initialization=true
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql=TRACE
+spring.datasource.encoding=UTF-8
+logging.level.org.springframework.orm.jpa=DEBUG
+spring.sql.init.mode=EMBEDDED
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=100MB
