--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,5 @@ logging.level.org.springframework.orm.jpa=DEBUG
 spring.sql.init.mode=EMBEDDED
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
+
+server.error.whitelabel.enabled=false
