--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,32 @@
 spring.application.name=backend
+
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/BusCompany
 spring.datasource.username=postgres
 spring.datasource.password=1212
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.packages-to-scan=com.example.BusCompanyApp.models
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+spring.datasource.encoding=UTF-8
+
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql=TRACE
-spring.datasource.encoding=UTF-8
 logging.level.org.springframework.orm.jpa=DEBUG
+
 spring.sql.init.mode=EMBEDDED
+
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
 
 server.error.whitelabel.enabled=false
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=ex.yokou@gmail.com
+spring.mail.password=bpmo dbaw ilgu yxeu
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
