--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,6 @@ spring.datasource.username=postgres
 spring.datasource.password=1212
 
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.hibernate.packages-to-scan=com.example.BusCompanyApp.models
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
@@ -15,6 +14,8 @@ spring.datasource.encoding=UTF-8
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql=TRACE
 logging.level.org.springframework.orm.jpa=DEBUG
+logging.level.org.springframework=DEBUG
+logging.level.org.hibernate.validator=TRACE
 
 spring.sql.init.mode=EMBEDDED
 
